examples/c/error-codes/violates-constraint/fatal/CV-TDG9-bad-static.output
CV-TDG9-bad-static.c:4:5: error: variable length array declaration not allowed at file scope
int y[x];
    ^ ~
1 error generated.
Translation failed (kcc_config dumped). To repeat, run this command in directory fatal:
